2006-10-14  Miguel de Icaza  <miguel@novell.com>

	* src/glib.h: add various _TO_LE and _FROM_LE macros.

	* test/endian.c: tests for endian conversion macros.

2006-10-09  Miguel de Icaza  <miguel@novell.com>

	* src/gmodule.h: Move definitions of gmodule to gmodule.h because
	Mono expects it there.

Mon Oct 9 12:59:16 CEST 2006 Paolo Molaro <lupus@ximian.com>

	* src/ghashtable.c: s/to_prime/g_spaced_primes_closest/g
	and put the array in readonly memory.
	* src/gstr.c: fixed the build and made array const.
	* src/gmodule.c: fixed thinko.

2006-10-08  Miguel de Icaza  <miguel@novell.com>

	* src/gstr.c (g_strdup): should allow NULL as an argument.

2006-10-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/string-util.c:
	* TODO:
	* src/gstr.c:
	* src/glib.h: implemented g_strescape.

2006-10-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/string-util.c:
	* configure.ac:
	* TODO:
	* src/gstr.c:
	* src/glib.h: implemented g_strlcpy.

2006-10-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/string-util.c:
	* TODO:
	* src/gstr.c:
	* src/glib.h: implemented g_strdelimit.

2006-10-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/spawn.c: add search path flag when running ls.
	* src/gspawn.c: g_spawn_command_line_sync searches the program in the
	PATH if it's not an absolute path.

2006-10-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/string-util.c:
	* src/glib.h: implement g_ascii_xdigit_value and tests.

2006-10-06  Miguel de Icaza  <miguel@novell.com>

	* src/gstr.c (g_ascii_strdown): Implement.

	* str/glib.c (g_log_set_handler): empty.
	(g_printerr): empty.
	(GMemVTable): define, empty, ignored.
	(G_USEC_PER_SEC) :-)

	* src/gunicode.c (g_convert): Add bytes_read, bytes_written
	support;   Small fixes to avoid valgrind errors. 
	
	(g_utf8_validate): Add, based on the libxml code.

	gstr.c: implement g_strdown. 

2006-10-05  Miguel de Icaza  <miguel@novell.com>
