@@ -1,3 +1,12 @@
+2006-10-15  Miguel de Icaza  <miguel@novell.com>
+
+	* src/glib.h (G_STRUCT_OFFSET): fix macro definition. 
+	fix typo.
+
+	* src/sizes.c: Add test.
+
+	* src/gshell.c: Make it build
+	
 2006-10-14  Miguel de Icaza  <miguel@novell.com>
 
 	* src/glib.h: add various _TO_LE and _FROM_LE macros.
